# mitsuki

./: .clang-format  .clangd  .cursorrules  .gitignore  .gitmodules  .lldbinit  .windsurfrules  CMakeLists.txt  CMakePresets.json  README.md  barrier.md  setup_env.ps1  to_img_pdf.ps1
.cursor/skills/: miki-phase.mdc  miki-review.mdc  miki-roadmap.mdc  miki-task.mdc
.windsurf/: pitfalls.md
.windsurf/workflows/: miki-check-backends.md  miki-gap.md  miki-phase.md  miki-roadmap.md  miki-task.md  review.md  tdd-test-design.md
cmake/: miki_compiler_flags.cmake  miki_copy_runtime_dlls.cmake  miki_modules.cmake  miki_options.cmake
cmake/targets/: demos.cmake  miki.cmake  miki_core.cmake  miki_d3d12.cmake  miki_debug.cmake  miki_glfw_backend.cmake  miki_opengl.cmake  miki_rendergraph.cmake  miki_rhi.cmake  miki_shader.cmake  miki_vulkan.cmake  miki_webgpu.cmake  tests.cmake
cmake/toolchain/: miki-coca.cmake
cmake/tools/: cmake-with-coca.cmd  cmake-with-coca.ps1
demos/debug/: logger_demo.cpp
demos/platform/: window_manager_demo.cpp
demos/rendergraph/: rg_mesh_torus_cube_demo.cpp  rg_torus_cube_demo.cpp
demos/rhi/: rhi_pipeline_library_demo.cpp  rhi_streaming_upload_demo.cpp  rhi_torus_demo.cpp  rhi_torus_demo_multi.cpp  rhi_triangle_demo.cpp
demos/shell/: miki_shell.html
demos/viz/: swapchain_sync_viz.html
examples/: window_manager_example.cpp
shaders/: CMakeLists.txt
shaders/miki/: miki-brdf.slang  miki-cad.slang  miki-cae.slang  miki-core.slang  miki-debug.slang  miki-geometry.slang  miki-lighting.slang  miki-math.slang  miki-neural.slang  miki-postfx.slang  miki-rt.slang  miki-shadow.slang  miki-xr.slang
shaders/passes/: blit.slang  bloom_pass.slang  csm_render.slang  deferred_resolve.slang  depth_prepass.slang  fullscreen_tri.slang  geometry_compat.slang  geometry_main.slang  gpu_culling.slang  gtao_compute.slang  light_cluster.slang  material_resolve.slang  taa_resolve.slang  tonemap_pass.slang  vsm_render.slang
shaders/tests/: probe_atomics_32.slang  probe_atomics_64.slang  probe_barrier_semantics.slang  probe_binding_map.slang  probe_compute_shared.slang  probe_glsl_atomic_32.slang  probe_glsl_binding_layout.slang  probe_glsl_image_load_store.slang  probe_glsl_push_constant_ubo.slang  probe_glsl_shared_memory.slang  probe_glsl_ssbo_mapping.slang  probe_glsl_texture_units.slang  probe_glsl_workgroup.slang  probe_half_precision.slang  probe_image_atomics.slang  probe_mesh_shader.slang  probe_push_constants.slang  probe_struct_array.slang  probe_subgroup_ballot.slang  probe_subgroup_clustered.slang  probe_subgroup_shuffle.slang  probe_texture_array.slang  probe_wgsl_array_stride.slang  probe_wgsl_group_binding.slang  probe_wgsl_no_64bit_atomics.slang  probe_wgsl_push_constant_ubo.slang  probe_wgsl_storage_alignment.slang  probe_wgsl_texture_sample.slang  probe_wgsl_workgroup_limits.slang
specs/: 00-infra.md  01-window-manager.md  02-progress.md  02-rhi-design.md  03-sync.md  04-progress.md  04-render-graph.md  04-shader-pipeline.md  05-progress.md  05-shader-pipeline.md  convert_roadmap.py  convert_to_pdf.py  demands-coverage-matrix.md  demands.md  error-code-ranges.md  meta.md  phase-7a1-cleanup-plan.md  rendering-pipeline-architecture.md  rendering-pipeline-architecture.old.md  rhi-design.md  rhi-enums-reference.md  roadmap.md
specs/memo/: 01-device.md  ecs-survey.md  slang-playground.md
specs/phases/: api-surface-index.md  phase-01-1a.md  phase-02-1b.md  phase-03-2.md  phase-04-3a.md  phase-05-3b.md  phase-06-4.md  phase-07-5.md  phase-08-6a.md  phase-09-6b.md  phase-11-7a1.md  phase-12-7a2.md  phase-13-7b.md  phase-MW-multiwin.md  phase-cd1-cooldown1.md  phase-sync-impl.md  timeline-semaphore-migration.md  transfer-layer-rewrite.md
specs/templates/: cooldown-task-template.md  phase-template.md  spike-task-template.md  task-template.md
tests/: test_event_simulator.cpp  test_structured_logger.cpp  test_surface_integration.cpp  test_window_manager.cpp  test_window_manager_glfw.cpp  test_window_manager_spec.cpp
tests/frame/: test_async_task_manager.cpp  test_command_pool_allocator.cpp  test_compute_queue_level.cpp  test_compute_queue_level_integration.cpp  test_deferred_destructor.cpp  test_frame_manager.cpp  test_frame_orchestrator.cpp  test_sync_scheduler.cpp
tests/platform/: MockWindowBackend.h
tests/rendergraph/: test_integration_multiflow.cpp  test_phase_i_caching.cpp  test_phase_j_debug.cpp  test_phase_k_extension.cpp  test_phase_l_advanced.cpp  test_render_graph.cpp
tests/resource/: test_readback_ring.cpp  test_staging_ring.cpp  test_upload_manager.cpp
tests/rhi/: RhiTestFixture.h  test_rhi_accel_struct.cpp  test_rhi_command_buffer.cpp  test_rhi_sync.cpp  (+8 more)
tools/: CMakeLists.txt  generate_kulla_conty_lut.py  import-windsurf-extensions.ps1  precompile_wgsl.cpp  write_deferred.py
tools/debugvis/: miki.natvis  miki_lldb_formatters.py
tools/miki-debug-mcp/: .vscodeignore  package-lock.json  package.json  tsconfig.json
tools/miki-debug-mcp/src/: debugController.ts  extension.ts  mcpServer.ts
tools/miki-demo-mcp/: pyproject.toml  server.py
tools/renderdoc-cli-mcp/: pyproject.toml  server.py
tools/rg-visualizer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tools/rg-visualizer/src/: App.vue
tools/rg-visualizer/src/assets/: main.css
tools/rg-visualizer/src/cli/: index.ts
tools/rg-visualizer/src/components/dag/: DagView.vue  PassNode.vue
tools/rg-visualizer/src/components/inspector/: InspectorPanel.vue
tools/rg-visualizer/src/components/layout/: AppShell.vue  TabBar.vue  TopBar.vue
tools/rg-visualizer/src/components/memory/: MemoryView.vue
tools/rg-visualizer/src/components/sidebar/: PassList.vue  ResourceList.vue
tools/rg-visualizer/src/components/timeline/: TimelineView.vue
tools/rg-visualizer/src/composables/: index.ts  useDataSource.ts  useGraphQuery.ts  useLayout.ts  useMemoryLayout.ts  useTimeline.ts
tools/rg-visualizer/src/stores/: graphStore.ts  index.ts  selectionStore.ts  uiStore.ts
tools/rg-visualizer/src/types/: derived.ts  enums.ts  events.ts  index.ts  schema.ts
(+630 files in other folders)
