[project]
name = "miki-demo-mcp"
version = "0.1.0"
description = "MCP server for controlling miki demo parameters — tone mapping, exposure, vignette, CA, camera, frame stats"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.3",
]

[project.scripts]
miki-demo-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"

[tool.uv]
package = true
dev-dependencies = []
